--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -8,16 +8,7 @@ Posts list
     <h1 class="mb-5">Posts:</h1>
   {% for post in posts %}
 
-    <div class="card mb-4">
-  <div class="card-header">
-    {{ post.date_pub }}
-  </div>
-  <div class="card-body">
-    <h5 class="card-title">{{ post.title }}</h5>
-    <p class="card-text">{{ post.body|truncatewords:15}}</p>
-    <a href="{% url 'post_detail_url' slug=post.slug %}" class="btn btn-light">Read</a>
-  </div>
-</div>
+  {% include 'blog/includes/post_card_template.html' %}
 
   {% endfor %}
 {% endblock %}
