--- a/blog/templates/blog/includes/post_card_template.html
+++ b/blog/templates/blog/includes/post_card_template.html
@@ -7,4 +7,10 @@
     <p class="card-text">{{ post.body|truncatewords:15}}</p>
     <a href="{{ post.get_absolute_url }}" class="btn btn-light">Read</a>
   </div>
+  <div class="card-footer text-muted">
+    Tags:
+    {% for tag in post.tags.all %}
+      <a href="{{ tag.get_absolute_url }}">{{ tag.title }}</a>
+    {% endfor %}
+  </div>
 </div>
