--- a/blog/templates/blog/post_create_form.html
+++ b/blog/templates/blog/post_create_form.html
@@ -7,7 +7,7 @@
 
 
 {% block content %}
-  <form class="" action="{% url 'post_create_url' %}" method="post">
+  <form action="{% url 'post_create_url' %}" method="post">
     {% csrf_token %}
 
     {% for field in form %}
