--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,27 @@
           {% block content%}
 
           {% endblock %}
+          {% if is_paginated %}
+          <nav aria-label="...">
+            <ul class="pagination">
+              <li class="page-item {% if not prev_url %} disabled {% endif %}">
+                <a class="page-link" href="{{ prev_url }}">Previous</a>
+              {% for n in page_object.paginator.page_range %}
+              {% if page_object.number == n %}
+                  <li class="page-item active">
+                    <a class="page-link" href="?page={{ n }}">{{n}}</a></li>
+              {% elif n > page_object.number|add:-3 and n < page_object.number|add:3 %}
+                  <li class="page-item {% if page_object.number == n %}active{% endif %}">
+                    <a class="page-link" href="?page={{ n }}">{{n}}</a></li>
+              {% endif %}
+              {% endfor %}
+              <li class="page-item {% if not next_url %} disabled {% endif %}">
+                <a class="page-link" href="{{ next_url }}">Next</a>
+              </li>
+            </ul>
+          </nav>
+          {% endif %}
+
         </div>
       </div>
     </div>
