--- a/templates/base.html
+++ b/templates/base.html
@@ -72,14 +72,24 @@
       </div>
     </div>
 
-    {% if request.user.is_authenticated and request.user.is_staff %}
+
 
     <div class="admin-panel align-items-center">
-      <a href="/admin" class="btn btn-outline-info">Admin</a>
+      {% if user.is_authenticated %}
+      <p>User: {{ user.username }}</p>
+      {% else %}
+      <a href="{% url 'login' %}" class="btn btn-info">Login</a>
+      {% endif %}
+      {% if request.user.is_authenticated and request.user.is_staff %}
+      <a href="/admin" class="btn btn-outline-info">Admin page</a>
       {% block admin-panel%}
       {% endblock %}
+      {% endif %}
+      {% if user.is_authenticated %}
+      <a href="{% url 'logout' %}" class="btn btn-link">Logout</a>
+      {% endif %}
     </div>
 
-    {% endif %}
+
   </body>
 </html>
