--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,6 +10,7 @@
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button class="btn btn-primary" type="submit">Login</button>  
+  <button class="btn btn-primary" type="submit">Login</button>
 </form>
+<p class='mt-2'><a  href="{% url 'password_reset' %}">Lost password?</a></p>
 {% endblock %}
