--- a/templates/base.html
+++ b/templates/base.html
@@ -16,22 +16,22 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;">
-      <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-blue" style="background-color: #e3f2fd;">
+      <a class="navbar-brand" href="{% url 'posts_list_url' %}">Blog</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'posts_list_url' %}">Posts</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'tags_list_url' %}">Tags</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            <a class="nav-link" href="{% url 'profiles_list_url' %}">Profiles</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0" action="{% url 'posts_list_url' %}">
