--- a/blog/templates/blog/profile_detail.html
+++ b/blog/templates/blog/profile_detail.html
@@ -9,6 +9,7 @@
 
 {% block content %}
     <h2 class='mb-4 d-flex justify-content-center'>{{ user_info.username }}</h2>
+    <img src="{{ user_info.profile.avatar.url }}" alt="">
     <p><b>First name: </b> {{ user_info.first_name }}</p>
     <p><b>Last name: </b> {{ user_info.last_name }}</p>
     <p><b>Email: </b>{{ user_info.email }}</p>
