--- a/blog/templates/blog/profile_edit.html
+++ b/blog/templates/blog/profile_edit.html
@@ -6,8 +6,21 @@
 
 
 {% block content %}
+  <p><b> {{ form2.avatar.label }} </b></p>
+  <img class="img-fluid w-50" vspace="3" src="{{ avatar }}" alt="Profile picture">
   <form action="{{ Profile.get_update_url }}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
+  <table class="mt-3 mb-5">
+    <td><button type="submit" name="delete_avatar" class="btn btn-secondary mr-2">Default avatar</button></td>
+    <td>{{ form2.avatar }}</td>
+    <tr>
+      {% if form2.errors %}
+        <div class="alert alert-danger">
+          {{ form2.errors }}
+        </div>
+      {% endif %}
+    </tr>
+  </table>
 
     {% for field in form1 %}
     <div class="form-group">
@@ -16,24 +29,26 @@
           {{field.errors}}
         </div>
       {% endif %}
-      {{ field.label }}
+      <b>{{ field.label }}</b>
       {{ field }}
 
     </div>
     {% endfor %}
     {% for field in form2 %}
     <div class="form-group">
+      {% if not field.name == 'avatar' %}
       {% if field.errors %}
         <div class="alert alert-danger">
           {{field.errors}}
         </div>
       {% endif %}
-      {{ field.label }}
+      <b>{{ field.label }}</b>
       {{ field }}
 
     </div>
+    {% endif %}
     {% endfor %}
-    <button type="submit" name="Save" class="btn btn-primary">Save profile</button>
+    <button type="submit" name="save" class="btn btn-primary">Save profile</button>
   </form>
 
 {% endblock %}
